# M2Suite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  build.ps1  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  format_finding.yml  reference_source.yml
.github/workflows/: ci.yml
apps/m2suite-shell/: CMakeLists.txt
apps/m2suite-shell/resources/: m2suite.qrc  m2suite.rc
apps/m2suite-shell/src/: FileTypes.cpp  FileTypes.h  ImageViewport.cpp  ImageViewport.h  MainWindow.cpp  MainWindow.h  ModelViewport.cpp  ModelViewport.h  Version.cpp  Version.h  WaveformView.cpp  WaveformView.h  main.cpp
cmake/: increment_build.cmake
cmake/triplets/: x64-windows.cmake
docs/: ARCHITECTURE.md  BUILDING.md  FORMATS.md  LIMITATIONS.md  REFERENCES.md  RELEASING.md
libs/libm2audio/: CMakeLists.txt
libs/libm2audio/include/m2audio/: Aiff.h  Encoder.h  Sdx2.h  Wav.h
libs/libm2audio/src/: Aiff.cpp  Encoder.cpp  Sdx2.cpp  Wav.cpp
libs/libm2cel/: CMakeLists.txt
libs/libm2cel/include/m2cel/: Anim.h  Cel.h  Imag.h
libs/libm2cel/src/: Anim.cpp  Cel.cpp  Imag.cpp
libs/libm2core/: CMakeLists.txt
libs/libm2core/include/m2core/: BitReader.h  ByteStream.h  Error.h  Iff.h
libs/libm2core/src/: ByteStream.cpp  Iff.cpp
libs/libm2disasm/: CMakeLists.txt
libs/libm2disasm/include/m2disasm/: Elf.h  Pseudocode.h
libs/libm2disasm/src/: Elf.cpp  Pseudocode.cpp
libs/libm2disc/: CMakeLists.txt
libs/libm2disc/include/m2disc/: OperaDisc.h
libs/libm2disc/src/: OperaDisc.cpp
libs/libm2model/: CMakeLists.txt
libs/libm2model/include/m2model/: AitdImage.h  AitdPak.h  AitdRoom.h
libs/libm2model/src/: AitdBody.cpp  AitdBody_new.cpp  AitdBody_parser.txt  AitdImage.cpp  AitdPak.cpp  AitdPalette.cpp  AitdRender.cpp  AitdRoom.cpp
libs/libm2stream/: CMakeLists.txt
libs/libm2stream/include/m2stream/: Stream.h
libs/libm2stream/src/: Stream.cpp
libs/libm2texture/: CMakeLists.txt
libs/libm2texture/include/m2texture/: M2TXColor.h  Texture.h  TextureEncoder.h
libs/libm2texture/src/: Texture.cpp  TextureEncoder.cpp
tests/: CMakeLists.txt
tests/fixtures/: Message.cel  close.utf  roofs.utf  sample.aiff  sample.anim  sample.elf  sample.imag  sample.str  sample.stream
tests/libm2audio_tests/: test_aiff_decode.cpp  test_encoder.cpp
tests/libm2cel_tests/: test_cel_decode.cpp
tests/libm2core_tests/: test_bytestream_iff.cpp
tests/libm2disasm_tests/: test_elf_disasm.cpp
tests/libm2disc_tests/: test_opera_disc.cpp
tests/libm2model_tests/: test_aitd_pak.cpp  test_aitd_synth.cpp
tests/libm2stream_tests/: test_stream_decode.cpp
tests/libm2texture_tests/: test_texture_roundtrip.cpp
